--- a/src/content/docs/guides/template.mdx
+++ b/src/content/docs/guides/template.mdx
@@ -1,6 +1,6 @@
 ---
-title: Example Guide
-description: A guide in my new Starlight docs site.
+title: Writing a template file
+description: A guide for slurmtools.
 ---
 
 Guides lead a user through a specific task they want to accomplish, often with a sequence of steps.
