--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -8,7 +8,7 @@ hero:
     file: ../../assets/slurmtools.png
   actions:
     - text: Slurmtools User Guide
-      link: /functions/0_intro/
+      link: /tutorials/0_intro/
       icon: right-arrow
     - text: Read the slurmtools docs
       link: https://a2-ai.github.io/slurmtools/
