--- a/src/content/docs/tutorials/generate_nmm_config.mdx
+++ b/src/content/docs/tutorials/generate_nmm_config.mdx
@@ -1,6 +1,7 @@
 ---
 title: Generating NONMEM monitor config file
 description: A guide for generate_nmm_config.
+pagefind: true
 ---
 
 # Overview 
