--- a/src/content/docs/tutorials/get_slurm_partitions.mdx
+++ b/src/content/docs/tutorials/get_slurm_partitions.mdx
@@ -1,6 +1,7 @@
 ---
 title: Getting available partitions on slurm
 description: A guide for get_slurm_partitions.
+pagefind: true
 ---
 
 # Overview
