updated shell and started writing docs

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -8,7 +8,7 @@ hero:
     file: ../../assets/slurmtools.png
   actions:
     - text: Slurmtools User Guide
-      link: /tutorials/0_intro/
+      link: /guides/0_intro/
       icon: right-arrow
     - text: Read the slurmtools docs
       link: https://a2-ai.github.io/slurmtools/
@@ -22,13 +22,13 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 
 <CardGrid stagger>
 	<Card title="Submitting a NONMEM job" icon="seti:bicep">
-		<a href="/guides/submit">A brief intro into submitting NONMEM jobs with slurmtools</a>
+		<a href="/guides/submit_nonmem_model">A brief intro into submitting NONMEM jobs with slurmtools</a>
 	</Card>
 	<Card title="Monitoring NONMEM jobs" icon="magnifier">
-		<a href="/guides/template">A brief intro into monitoring NONMEM jobs with slurmtools</a>
+		<a href="/guides/get_slurm_jobs">A brief intro into monitoring NONMEM jobs with slurmtools</a>
 	</Card>
 	<Card title="Writing a template file" icon="seti:mustache">
-		<a href="/guides/template">A brief intro into customizing slurm job template files</a>
+		<a href="/blogs/writing_templates">A brief intro into customizing slurm job template files</a>
 	</Card>
 	<Card title="Getting notifications" icon="information">
 		Update a template to get ntfy.sh alerts.
