updated getting_started and submit_nonmem_model

--- a/src/content/docs/guides/1_getting_started.mdx
+++ b/src/content/docs/guides/1_getting_started.mdx
@@ -2,8 +2,7 @@
 title: Getting started
 description: A guide for slurmtools.
 ---
-import { Card } from '@astrojs/starlight/components';
-import { Steps } from '@astrojs/starlight/components';
+import { Card, Steps, Aside } from '@astrojs/starlight/components';
 
 ## Installing slurmtools
 
@@ -31,7 +30,7 @@ When `slurmtools` loads, you'll see an onAttach message listing several options 
 These options are used in submit_nonmem_model and help slurmtools locate specific files and directories for job submissions. While the message suggests that these options are _necessary_, they primarily save time by avoiding repeated typing when submitting multiple jobs. Here's what each option should be set to:
 
 <Steps>
-1. `options('slurmtools.slum_job_template_path')` - the [template file](/blogs/writing_templates) that will be populated for submitting jobs
+1. `options('slurmtools.slum_job_template_path')` - the [template file](/guides/simple_template_file) that will be populated for submitting jobs
 2. `options('slurmtools.submission_root')` - the path to the directory where slurm jobs are submitted from
 3. `options('slurmtools.bbi_config_path')` - the path of the bbi.yaml config file 
 </Steps>
@@ -53,5 +52,7 @@ If only some options are set, slurmtools will show which ones still need setting
 <span style="display: block;"><span style="color: red;">✖</span> options('slurmtools.bbi_config_path') is not set.</span>
 <span style="display: block;"><span style="color: blue;">ℹ</span> Please set all options for job submission defaults to work.</span>
 </Card>
+
+<Aside type="note">You do not need to set these options before loading `slurmtools` or even at all to use `slurmtools`</Aside>
 
 With these options set (or if you're aware of their use), you're all set to work with `slurmtools`!
