--- a/src/content/docs/guides/submit_nonmem_model.mdx
+++ b/src/content/docs/guides/submit_nonmem_model.mdx
@@ -11,10 +11,10 @@ This guide describes how to submit a NONMEM job to slurm using the `submit_nonme
 
 To use `submit_nonmem_model` you need a few things set before hand
 <Steps>
-1. A  in [template file](/guides/simple_template_file)
+1. A [template file](/guides/simple_template_file) ready to be populated
 2. All files needed to run NONMEM - control stream and data
 3. [`bbr`](https://github.com/metrumresearchgroup/bbr) installed in your R environment
-4. A way of running nonmem such as bbi or nmm
+4. A way of running NONMEM such as bbi or nmm
 </Steps>
 <Aside type="note">Depending on the complexity of your template file you might need additional information as well!</Aside> 
 
@@ -26,8 +26,9 @@ Here's the code you'll use to submit a job with submit_nonmem_model, this uses d
 import submit_code from '/src/submit.R?raw';
 
 <Code title="submit_job.R" lang="R" code = {submit_code} />
-
 With all prerequisites in place, running this code sends your NONMEM model to Slurm. Let’s look at what you can expect from the output.
+
+<Aside type="note">If you've already submitted the model, `submit_nonmem_model` by default will not overwrite and existing model. Check out [`submit_nonmem_model` Reference Guide](/reference/submit_nonmem_model_reference) for more details on the overwrite argument.</Aside>
 
 ## Understanding the Output
 <Code
@@ -53,4 +54,4 @@ $timeout
 <Aside type="tip"> A status code of 0 is what you want! It indicates there were no issues. </Aside>
 
 ## Next Steps
-For more advanced usage: If you’re interested in learning how to use non-default arguments with submit_nonmem_model for more customized job submissions, please check out our [Advanced Job Submission Guide](/guides/submit_nonmem_model_advanced)
+For more advanced usage: If you’re interested in learning how to use non-default arguments with submit_nonmem_model for more customized job submissions, please check out our [`submit_nonmem_model` Reference Guide](/reference/submit_nonmem_model_reference)
