--- a/src/content/docs/guides/submit_nonmem_model.mdx
+++ b/src/content/docs/guides/submit_nonmem_model.mdx
@@ -25,26 +25,25 @@ Here's the code you'll use to submit a job with submit_nonmem_model, this uses d
 
 import submit_code from '/src/submit.R?raw';
 
-<Code title="submit_job.R" lang="R" code = {submit_code} />
+<Code title="submit_job.R" lang="r" code = {submit_code} />
 With all prerequisites in place, running this code sends your NONMEM model to Slurm. Let’s look at what you can expect from the output.
 
 <Aside type="note">If you've already submitted the model, `submit_nonmem_model` by default will not overwrite and existing model. Check out [`submit_nonmem_model` Reference Guide](/reference/submit_nonmem_model_reference) for more details on the overwrite argument.</Aside>
 
 ## Understanding the Output
-<Code
-title='OUTPUT' lang='R' 
-code='$status
+```r
+$status
 [1] 0
 
 $stdout
-[1] "Submitted batch job 436\n"
+[1] "Submitted batch job 436"
 
 $stderr
 [1] ""
 
 $timeout
-[1] FALSE'
-/>
+[1] FALSE
+```
 
 - **$status**: This shows an exit code of `0`, which means everything went smoothly.
 - **$stdout**: Here, you’ll see a message confirming your job submission, along with the job ID (e.g., 436).
