--- a/src/content/docs/reference/submit_nonmem_model_reference.mdx
+++ b/src/content/docs/reference/submit_nonmem_model_reference.mdx
@@ -9,16 +9,16 @@ import { Aside, Code } from '@astrojs/starlight/components';
 This guide assumes you are familiar with submitting NONMEM jobs using the [default arguments](/guides/submit_nonmem_model), and are looking for more control over you job submission. We'll cover each argument to `submit_nonmem_model` and overriding the default. You should be able to combine any combination of arguments to suit your needs.
 
 ### Using the `partition` & `ncpu` Arguments
-By default, `submit_nonmem_model` uses the smallest partition available to you. This is generally something like `cpu2mem4gb`. There are several situations where you might need more memory or cpus for your particular model. In such cases you can update these arguments to better suit your needs. Please see [get_slurm_partitions](/guides/get_slurm_partitions) to understand the partitions available to you.
+By default, `submit_nonmem_model` uses the smallest partition available to you. This could be something like `cpu2mem4gb`. For models requiring more memory or CPUs, you can specify these arguments to better suit your needs. To view available partitions, refer to [get_slurm_partitions](/guides/get_slurm_partitions).
 
-#### Using higher memory `partition`
+#### specifying a higher memory `partition`
 
 import submit_code_part from '/src/submit_partition.R?raw';
 
 <Code title="submit_job.R" lang="r" code={submit_code_part} />
 
-#### Using more cores `ncpu`
-You can set `ncpu` to any number less than or equal to the number of cores on your partition. If we are using a `cpu16mem128gb` partition `ncpu` can be 1 to 16.
+#### Using more cores with `ncpu`
+Set `ncpu` to any number up to the number of cores in your partition. For instance, with the cpu16mem128gb partition, ncpu can be set from 1 to 16.
 
 import submit_code_ncpu from '/src/submit_ncpu.R?raw';
 
@@ -38,14 +38,14 @@ import submit_code_ncpu from '/src/submit_ncpu.R?raw';
 </Aside>
 
 ### Using the `overwrite` Argument
-By default, `submit_nonmem_model` will not overwrite and existing previously run model. This can be altered by setting the `overwrite` argument to `TRUE`
+By default, submit_nonmem_model will not overwrite previously run models. Set `overwrite = TRUE` to override this.
 
 import submit_code from '/src/submit_overwrite.R?raw';
 
 <Code title="submit_job.R" lang="r" code={submit_code} />
 
 ### Using the `dry_run` Argument
-This allows you to fill in the template and see what would be called if dry_run was not `TRUE`
+By default, `dry_run = FALSE` and the `sbatch` command is executed. Setting `dry_run = TRUE` allows you to preview the template file without submitting it.
 
 import submit_code_dry from '/src/submit_dry.R?raw';
 
@@ -65,11 +65,9 @@ $template_script
 $partition
 [1] "cpu16mem64gb"
 ```
-Which you can use to inspect your template script for completeness and errors.
 
 ### Using the `slurm_job_template_path` Argument
-By default, `submit_nonmem_model` uses `getOption('slurmtools.slurm_job_template_path')` for the path to the template file (see [Getting Started Guide](guides/1_getting_started) if you're unfamiliar with the `slurmtools` options).
-If you are working with different templates for different models, or trying out a new template for new features (see [guide on expanding templates](/blogs/writing_templates)) then you can update this argument to point to a template file:
+By default, `submit_nonmem_model` uses `getOption('slurmtools.slurm_job_template_path')` for the path to the template file (see [Getting Started Guide](guides/1_getting_started) if you're unfamiliar with the `slurmtools` options). You can update this argument to use a different template file as needed.
 
 import submit_code_path from '/src/submit_path.R?raw';
 
@@ -95,4 +93,10 @@ import submit_code_bbi from '/src/submit_bbi.R?raw';
 
 ### Using the `slurm_template_opts` Argument
 
-If your template file needs additional arguments `slurm_template_opts` is how to inject them. This argument is a named list of argument, value pairs. If you need to supply an email address for notifications you can set this argument to `list('email' = 'matthews@a2-ai.com')`
+If additional arguments are needed in your template file, pass them via `slurm_template_opts` as a named list. For example, to set an email for notifications:.
+
+import submit_code_opts from '/src/submit_opts.R?raw';
+
+<Code title='submit_job.R' lang='r' code={submit_code_opts}/>
+
+This will cause any instances of `{{ email }}` in your template file to be replaced with `matthews@a2-ai.com`. If you are unfamiliar with template file structure, please see the guide on [writing template files](/guies/simple_template_file)
