updated get_slurm_jobs guide

--- a/src/content/docs/guides/submit_nonmem_model.mdx
+++ b/src/content/docs/guides/submit_nonmem_model.mdx
@@ -7,7 +7,7 @@ import { Aside, Code, Steps } from '@astrojs/starlight/components';
 
 This guide describes how to submit a NONMEM job to slurm using the `submit_nonmem_model` function. First, make sure you have loaded `slurmtools` and are familiar with the [needed options](/guides/1_getting_started) to use slurmtools.
 
-## Prerequisite Files and Programs
+## Prerequisite files and programs
 
 To use `submit_nonmem_model` you need a few things set before hand
 <Steps>
@@ -31,7 +31,7 @@ With all prerequisites in place, running this code sends your NONMEM model to Sl
 
 <Aside type="note">If you've already submitted the model, `submit_nonmem_model` by default will not overwrite and existing model. Check out [`submit_nonmem_model` Reference Guide](/reference/submit_nonmem_model_reference) for more details on the overwrite argument.</Aside>
 
-## Understanding the Output
+## Understanding the output
 ```r
 $status
 [1] 0
