updated reference links and doc titles

--- a/src/content/docs/guides/get_slurm_partitions.mdx
+++ b/src/content/docs/guides/get_slurm_partitions.mdx
@@ -1,5 +1,5 @@
 ---
-title: Getting available partitions on slurm
+title: How to see available partitions
 description: A guide for get_slurm_partitions.
 pagefind: true
 ---
