--- a/src/content/docs/guides/get_slurm_jobs.mdx
+++ b/src/content/docs/guides/get_slurm_jobs.mdx
@@ -1,5 +1,5 @@
 ---
-title: Monitoring NONMEM models on slurm
+title: How to see submitted jobs
 description: A guide for get_slurm_jobs.
 pagefind: true
 ---
