updated cancel_job documentation

--- a/src/content/docs/guides/get_slurm_jobs.mdx
+++ b/src/content/docs/guides/get_slurm_jobs.mdx
@@ -4,7 +4,7 @@ description: A guide for get_slurm_jobs.
 pagefind: true
 ---
 
-import { Aside, Code, Steps } from '@astrojs/starlight/components';
+import { Code, Steps } from '@astrojs/starlight/components';
 
 This guide describes how to view jobs submitted to slurm using the `get_slurm_jobs` function.
 
