--- a/src/content/docs/guides/1_getting_started.mdx
+++ b/src/content/docs/guides/1_getting_started.mdx
@@ -27,7 +27,7 @@ When `slurmtools` loads, you'll see an onAttach message listing several options 
 </Card>
 
 
-These options are used in submit_nonmem_model and help slurmtools locate specific files and directories for job submissions. While the message suggests that these options are _necessary_, they primarily save time by avoiding repeated typing when submitting multiple jobs. Here's what each option should be set to:
+These options are used in `submit_slurm_job` and help slurmtools locate specific files and directories for job submissions. While the message suggests that these options are _necessary_, they primarily save time by avoiding repeated typing when submitting multiple jobs. Here's what each option should be set to:
 
 <Steps>
 1. `options('slurmtools.slum_job_template_path')` - the [template file](/guides/simple_template_file) that will be populated for submitting jobs
