--- a/src/content/docs/reference/cancel_slurm_job_reference.mdx
+++ b/src/content/docs/reference/cancel_slurm_job_reference.mdx
@@ -1,6 +1,6 @@
 ---
-title: submit_nonmem_model Reference
-description: A guide for submit_nonmem_model.
+title: submit_slurm_job Reference
+description: A guide for submit_slurm_job.
 pagefind: true
 ---
 
