--- a/src/content/docs/guides/simple_template_file.mdx
+++ b/src/content/docs/guides/simple_template_file.mdx
@@ -1,5 +1,5 @@
 ---
 title: How to write a simple template file
-description: A guide for submit_nonmem_model.
+description: A guide for submit_slurm_job.
 pagefind: true
 ---
